<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/Green"
    tools:context=".cadastro">

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="127dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/projeto_cruzeiro" />

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="211dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/cadas"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagem" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:background="@drawable/backgroun_edittext"
        android:hint="@string/hint_name"
        android:maxLines="2"
        android:padding="15dp"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="227dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cpf"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:background="@drawable/backgroun_edittext"
        android:hint="@string/text_cpf"
        android:inputType="number"
        android:maxLines="2"
        android:padding="15dp"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="289dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/senha"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:background="@drawable/backgroun_edittext"
        android:hint="@string/hint_senha"
        android:inputType="numberPassword"
        android:maxLines="2"
        android:padding="15dp"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="350dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editSenha"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:background="@drawable/backgroun_edittext"
        android:hint="@string/hint_senhaConfirmar"
        android:inputType="numberPassword"
        android:maxLines="2"
        android:padding="15dp"
        android:textSize="18sp"

        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="415dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cadast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/background_button_selector"
        android:enabled="true"
        android:padding="15dp"
        android:text="@string/cadast"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSenha" />

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        android:rotationX="500"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="522dp" />

    <ImageView
        android:id="@+id/Ic_Navegar"
        android:layout_width="28dp"
        android:layout_height="68dp"
        android:src="@drawable/ic_back"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="630dp"
        tools:ignore="ContentDescription,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>